feat: Successfully integrated Tailwind CSS v3 and DaisyUI v4 with Svelte 3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,45 @@
 {
-  // see https://guide.meteor.com/build-tool.html#typescript for a config example
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true, // to be able to import eg meteor/mongo
-    "baseUrl": ".", // required by "paths"
-    "module": "esNext", // required by "preserveValueImports"
-    "moduleResolution": "node", // required by zodern:types (not documented)
+    "target": "esnext", // Specify a modern JS target
+    "module": "esNext", // Use ESNext modules
+    "moduleResolution": "bundler", // Or "node16"/"nodenext". 'bundler' is good for modern tools.
+    "baseUrl": ".",
     "paths": {
-      "/*": ["*"], // support absolute /imports/* with a leading '/'
-      // support Meteor/Atmospehere packages, required by zodern:types
+      "/*": ["*"],
       "meteor/*": [
         "node_modules/@types/meteor/*",
-        ".meteor/local/types/packages.d.ts"
+        ".meteor/local/types/packages.d.ts" // Ensure this path is correct for your setup
       ]
     },
-    "preserveSymlinks": true, // required by zodern:types
-    "preserveValueImports": true // otherwise TS will remove imported components
+    "resolveJsonModule": true, // Allows importing JSON files
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true, // Improves compatibility between CommonJS and ES modules
+    "preserveSymlinks": true,
+    "verbatimModuleSyntax": true, // Replaces preserveValueImports
+    "useDefineForClassFields": true, // Often required for modern JS/TS class fields
+    "skipLibCheck": true, // Speeds up compilation by not type-checking declaration files in node_modules
+    "forceConsistentCasingInFileNames": true,
+    "strict": false // You can set this to true for stricter type checking later
+    // Add Svelte specific options if needed, but usually handled by svelte-preprocess
   },
-  "exclude": ["./.meteor/**", "./packages/**"] // this may solve VS Code Svelte plugin warnings
+  "include": [
+    "imports/**/*.js",
+    "imports/**/*.ts",
+    "imports/**/*.svelte",
+    "client/**/*.js",
+    "client/**/*.ts",
+    "client/**/*.svelte",
+    "server/**/*.js",
+    "server/**/*.ts",
+    "*.js",        // For root JS files if any
+    "*.ts",        // For root TS files if any
+    "*.cjs",       // To include your .config.cjs files
+    "*.mjs"
+  ],
+  "exclude": [
+    "node_modules", // Explicitly exclude node_modules
+    ".meteor/**",
+    "packages/**",  // If you have a local Meteor packages folder
+    "public/**"     // Typically not part of TS compilation
+  ]
 }
