--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "svelte": "^3.54.0"
   },
   "devDependencies": {
-    "svelte-preprocess": "^5.0.0"
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^4.12.24",
+    "postcss": "^8.5.3",
+    "svelte-preprocess": "^5.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "meteor": {
     "mainModule": {
