--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "svelte": "^3.54.0"
   },
   "devDependencies": {
+    "@types/meteor": "^2.9.8",
     "autoprefixer": "^10.4.21",
     "daisyui": "^4.12.24",
     "postcss": "^8.5.3",
     "svelte-preprocess": "^5.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   },
   "meteor": {
     "mainModule": {
-      "client": "client/main.js",
-      "server": "server/main.js"
+      "client": "client/main.ts",
+      "server": "server/main.ts"
     },
     "nodeModules": {
       "recompile": {
