fix: Resolve Svelte module errors, basic React + MUI app rendering
- Removed zodern:melte, zodern:melte-compiler, zodern:types.
- Cleaned node_modules, .meteor/local, and package-lock.json.
- Confirmed basic React app with MUI typography renders.

Relates to #4

--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "meteor-node-stubs": "^1.2.5",
-    "svelte": "^3.54.0",
-    "svelte-preprocess": "^5.0.0",
-    "typescript": "^5.8.3"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/meteor": "^2.9.8",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "autoprefixer": "^10.4.21",
-    "daisyui": "^4.12.24",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "typescript": "^5.8.3"
   },
   "meteor": {
     "mainModule": {
-      "client": "client/main.ts",
+      "client": "client/main.tsx",
       "server": "server/main.ts"
     },
     "nodeModules": {
-      "recompile": {
-        "svelte": [
-          "legacy"
-        ]
-      }
+      "recompile": {}
     },
     "testModule": "tests/main.js"
   }
